# P2P-Chat

./: .gitignore  CMakeLists.txt  README.md
cli_client/: EChat_cli.c
cli_client/include/: menu.h  terminal.h
cli_client/src/: menu.c  terminal.c
client_core/include/: TLS.h  client_core.h  cross_platform_api.h
client_core/src/: client_core.c
include/: MsgEncrypt.h  MySocket.h  menu.h  terminal.h  utils.h
server/: server.c
server/include/: server.h  workers.h
server/src/: server_core.c  workers.h
src/: CLI_client.c  menu.c  server.c  terminal.c
tests/: test_client.c  test_menu.c  test_queue.c  test_server.c
utils/: String.h  d_array.h  d_string.h  darray.h  linked_list.h  queue.h  spsc_queue.h
